<resources>
    <string name="app_name">Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">홈</string>
    <string name="bio">바이오융합대학</string>
    <string name="medical">보건과학대학</string>

    <string name="bio2">바이오융합대학 \n \n \n \n \n</string>
    <string name="medical2">보건과학대학 \n \n \n \n \n</string>
    <string name="community">커뮤니티 \n \n \n \n \n</string>
    <string name="profile">내 프로필 \n \n \n \n \n</string>

    <string name="imsang">임상병리학과</string>
    <string name="angwang">안경광학과</string>
    <string name="eunggup">응급구조학과</string>
    <string name="bangsa">방사선학과</string>
    <string name="chiseng">치위생학과</string>
    <string name="moolchi">물리치료학과</string>

    <string name="sikyoung">식품영양학과</string>
    <string name="siksan">식품산업외식학과</string>
    <string name="bohwan">보건환경안전학과</string>
    <string name="euigyoung">의료경영학과</string>
    <string name="it">의료IT학과</string>
    <string name="euigong">의료공학과</string>
    <string name="mihwa">미용화장품과학과</string>
    <string name="hongdi">의료홍보디자인학과</string>
    <string name="sa">스포츠아웃도어학과</string>
    <string name="jangji">장례지도학과</string>
    <string name="joongjae">중독재활복지학과</string>
    <string name="yua">유아교육학과</string>
    <string name="adong">아동학과</string>
    <string name="bigdata">빅데이터의료융합학과</string>
</resources>