<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="aop.ief.afinal.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_community"
        android:name="aop.ief.afinal.ui.community.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="aop.ief.afinal.ui.gallery.GalleryFragment"
        android:label="@string/bio"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="aop.ief.afinal.ui.slideshow.SlideshowFragment"
        android:label="@string/medical"
        tools:layout="@layout/fragment_slideshow" />
</navigation>